[package]
name = "uuidgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.7"
md-5 = "0.10.6"
rand = "0.8.5"
sha1 = "0.10.6"
phf = { version = "0.11.2", default-features = false, features = ['macros'] }
thiserror = "1.0.56"
web-time = { version = "0.2.4", optional = true }
num-traits = "0.2.17"

[features]
webtime = ["dep:web-time"]
